--- a/bmc_template/paper.bib
+++ b/bmc_template/paper.bib
@@ -708,3 +708,23 @@
 		  selectivity, specificity},
   year		= {2017}
 }
+
+
+@article{zhou2010gates,
+  title={The gates of ion channels and enzymes},
+  author={Zhou, Huan-Xiang and McCammon, J Andrew},
+  journal={Trends in biochemical sciences},
+  volume={35},
+  number={3},
+  pages={179--185},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@misc{pdbqt,
+    title={PDBQT data format},
+    author={},
+    url={http://autodock.scripps.edu/faqs-help/faq/what-is-the-format-of-a-pdbqt-file},
+}
+
+
